--- a/enroll/templates/enroll/base.html
+++ b/enroll/templates/enroll/base.html
@@ -8,6 +8,10 @@
     <title>CRUD Project</title>
 </head>
 <body>
+    <div class="container mt-5">
+        <h2 class="text-center alert alert-danger">Function Base View ModelForm CRUD Project </h2>
+        {% block content %}{% endblock content %}
+    </div>
     <script src="{% static 'enroll/js/jquery.js' %}"></script>
     <script src="{% static 'enroll/js/popper.js' %}"></script>
     <script src="{% static 'enroll/js/bootstrap.js' %}"></script>
