--- a/enroll/templates/enroll/addandshow.html
+++ b/enroll/templates/enroll/addandshow.html
@@ -3,12 +3,40 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h4 class="text-center alert alert-info">Add new student</h4>
+        <h4 class="text-center alert alert-info">Add New Student</h4>
         <form action="" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" class="btn btn-success" value="Add">
         </form>
+    </div>
+    <div class="col-sm-8">
+        <h4 class="text-center alert alert-info">Show Students Information</h4>
+        {% if students %}
+        <h4>Table Data</h4>
+        <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Password</th>
+                  </tr>
+                </thead>
+                <tbody>
+                    {% for student in students %}
+                  <tr>
+                    <th scope="row">{{student.id}}</th>
+                    <td>{{student.name}}</td>
+                    <td>{{student.email}}</td>
+                    <td>{{student.password}}</td>
+                  </tr>
+                    {% endfor %}
+                </tbody>
+          </table>
+        {% else %}
+        <h4 class="text-center alert alert-warning">No Records</h4>
+        {% endif %}
     </div>
 </div>
 
