--- a/enroll/templates/enroll/addandshow.html
+++ b/enroll/templates/enroll/addandshow.html
@@ -10,7 +10,7 @@
             <input type="submit" class="btn btn-success" value="Add">
         </form>
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-7 offset-1">
         <h4 class="text-center alert alert-info">Show Students Information</h4>
         {% if students %}
         <h4>Table Data</h4>
@@ -21,6 +21,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Password</th>
+                    <th scope="col">Action</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -30,6 +31,14 @@
                     <td>{{student.name}}</td>
                     <td>{{student.email}}</td>
                     <td>{{student.password}}</td>
+                    <td>
+                        <a href="#" class="btn btn-warning btn-sm">Edit</a>
+                        <form action="{% url 'deletedata' student.id %}" method="POST" class="d-inline">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-danger" value="Delete">
+                        </form>
+                        
+                    </td>
                   </tr>
                     {% endfor %}
                 </tbody>
