--- a/enroll/templates/enroll/base.html
+++ b/enroll/templates/enroll/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="text-center alert alert-danger">Function Base View ModelForm CRUD Project </h2>
+        <h2 class="text-center alert alert-danger">Base Class-Based View ModelForm CRUD Project </h2>
         {% block content %}{% endblock content %}
     </div>
     <script src="{% static 'enroll/js/jquery.js' %}"></script>
